src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/classInstantiatedWithNoArgs.wacc
# class instantiation doesn't contain any args

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        int x
    }

    MyClass x = new MyClass {}
end